2016-11-15  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp/tests/hex-random.c (hex_random_init): Added fflush
	call.

2016-11-15  Torbjörn Granlund  <tg@gmplib.org>

	* mini-gmp/tests/Makefile (TESTS): New variable, allowing separation of
	compilation and running of tests.
	* mini-gmp/tests/run-tests: Allow empty tests list.

2016-11-01  Torbjörn Granlund  <tg@gmplib.org>

	* mini-gmp/tests/hex-random.c: Reinstate gmp.h inclusion.

2016-08-22  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp/mini-gmp.c (mpn_set_str_other): Always return size >=
	1, with unnormalized result in the case the input digits are all
	zero. Fixes crash on a large number of leading zeros, reported by
	Axel Miller.
	(mpz_set_str): Normalize as needed, after above change. Return
	failure for inputs string with no digits, i.e., empty except for
	optional sign, base prefix and white space.

2016-01-01 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp/mini-gmp.c: Silence warnings due to (un)signed types.
	* mini-gmp/tests/testutils.c: Likewise.
	* mini-gmp/tests/t-logops.c: Likewise.
	* mini-gmp/tests/t-cmp_d.c: Likewise.
	* mini-gmp/tests/t-reuse.c: Likewise.
	* mini-gmp/tests/t-cong.c: Likewise.

2015-11-13 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp/mini-gmp.c: Lazy allocation for mpz_t.
	(mpz_rootrem): Exploit lazy allocation to avoid init2.

2015-11-06 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp/mini-gmp.c (mpn_com, mpn_neg): New functions.
	* mini-gmp/mini-gmp.h: Declare them.
	* mini-gmp/mini-gmp.c (mpz_div_r_2exp): Use mpn_neg.

2015-10-29 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp/mini-gmp.c: Removed a typo (spotted by Paul Zimmermann).

2015-05-30 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp/mini-gmp.h: Declare mpn_zero_p.
	* mini-gmp/mini-gmp.c: Define mpn_zero_p as a function, not a macro.

2014-08-27  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp/mini-gmp.c (mpz_abs_sub_bit): Do full normalization,